--- a/donate.html
+++ b/donate.html
@@ -47,13 +47,25 @@
             <span class='header'>Запланированные статьи</span>
             <span class='description'></span>
         </span>.</p>
+<p><br></p>
 <div style="display: flex; flex-direction: column">
+    <a href="https://www.patreon.com/blksv" target="blank">Patreon (подписка)</a>
     <a href="https://ru.liberapay.com/blksv/donate" target="blank">LiberaPay (подписка)</a>
     <a href="https://boosty.to/blksv" target="blank">Boosty (подписка)</a>
-    <a href="https://www.patreon.com/blksv" target="blank">Patreon (подписка)</a>
     <a href="https://yoomoney.ru/to/410011254416486/300" target="blank">YooMoney (разово)</a>
-    <a href="https://paypal.me/blksv/5USD" target="blank">PayPal (разово, только из-за пределов РФ)</a>
+    <a href="https://paypal.me/blksv2" target="blank">PayPal (разово)</a>
 </div>
+<style>
+    td {
+        word-wrap: anywhere
+    }
+    table {
+        font-size: 75%
+    }
+</style>
+<table>
+<p><tbody><tr ><td > Binance PayID </td><td > 534376682 </td></tr><tr ><td > BTC </td><td > 1Q3tE4PnysfGAF59MM7Ren2r4FjAY213VC </td></tr><tr ><td > LTC </td><td > LKeVUkm1WztNiivjSkfRpxVLV7NrebRX2E </td></tr><tr ><td > XMR </td><td > 84L394WVe77hiEZxrme8veQ8cVDxpHxVYYkgdU4wcPfLgEy9nn4E4kQiop2DgB6KRwCPSUN7vAZKkUcTRMMUu1zK35X9hWs </td></tr><tr ><td > Ethereum (ETH, DAI, USDT, USDC, ...) </td><td > 0x0b3a2c74b9dcc59621ab5943a8845e01a87aa932 </td></tr><tr ><td > BNB Smart (BUSD, USDT, USDC, ...) </td><td > 0x0b3a2c74b9dcc59621ab5943a8845e01a87aa932 </td></tr><tr ><td > Tron (USDT, TUSD, USDC, ...) </td><td > TNPZPwxEQSRyh3y3k3qSwoZwVNjbwDUrGF </td></tr><tr ><td > Solana (SOL, ...) </td><td > FSWyNexGJ2WhkMGZrtkkAXxAZDJi3eACnrhWz2KQpz8H </td></tr><tr ><td > Polkadot (DOT, ...) </td><td > 16ahCBY67MTeyZpXppLTx8bkTwvFETpNBXMJYjaq4S7NwMSX </td></tr><tr ><td > Cardano (ADA, ...) </td><td > addr1v9dnwh0kzfrxpxtshpdsey7vj9aks9c72hxd5ayqkzvf53gtq8jk8 </td></tr></tbody></p>
+</table>
 </section>
             </div>
             <hr/>
