--- a/notes/lightspeed.html
+++ b/notes/lightspeed.html
@@ -43,6 +43,18 @@
             </header>
             <div class="content">                <section id="">
 <div class="meta">
+<details>
+            <summary>Используется в:</summary>
+            <ul>
+                        <li><a href='/notes/money_printer'>Почему и как печатают деньги</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Почему и как печатают деньги</span>
+        <span class='description'>Если «официальные» деньги редки — экономические агенты будут искать/создавать им замену. А банки в силу самой своей природы создают деньги: депозит превращается в кредит + право требования (ПТ) вложенных средств, а кредит возвращается в банк депозитом (деньги в процессе обмена не уничтожаются), чтобы снова стать кредитом + ПТ. ПТ могут служить средством обращения, даже если запрещены досрочные возвраты. Поэтому ни золотой стандарт, ни полное резервирование не являются эффективными ограничителями эмиссии. Объём денежной массы определяется кредитованием: если нет кредитования, то цепочка «депозит → кредит + ПТ → депозит + ПТ → кредит + 2ПТ → ...» обрывается на «депозит → ПТ». Объём кредитования зависит от (а) нормы резервирования, (б) желания ЦБ предоставлять ликвидность банкам, (в) спросом на кредитование, (г) способностью экономики наращивать выпуск (нет роста полезности ⇒ нечем платить проценты по кредитам ⇒ банки их не выдают), (д) склонностью банков к риску. Оптимальные основы создания денег: управляемая ЦБ денежная база, ограниченный нормами резервирования банковский мультипликатор, разрешённая трансформация дюрации + страхование вкладов, скорее общегосударственные денежные знаки.</span>
+    </span></li>
+            </ul>
+        </details>
 </div>
 <p>Информация всегда распространяется с конечной скоростью.
 Боюсь, этот факт недооценён.</p>
@@ -103,13 +115,19 @@
    Таким образом исправляются ошибки в распределении ресурсов.
    Дефляция такие ошибки усугубляет — невостребованные права на ресурсы самовозрастают, а активные агенты испытывают их недостаток.
    Неэффективные экономические структуры консервируются.</li>
-<li>Цены более охотно растут, чем уменьшаются (чтобы предприниматель повысил цену, ему достаточно уверенности, что рост цены компенсирует падение спроса, чтобы понизил вслед за уменьшением спроса — нужно быть уверенным, что и все его поставщики по цепочке в скором времени их тоже понизят). Таким образом, инфляционные искажения структуры экономики менее выражены, чем дефляционные.</li>
+<li>Цены более охотно растут, чем уменьшаются (чтобы предприниматель повысил цену, ему достаточно уверенности, что рост цены компенсирует падение спроса; чтобы понизил вслед за уменьшением спроса — нужно быть уверенным, что и все его поставщики по цепочке в скором времени их тоже понизят). Таким образом, инфляционные искажения структуры экономики менее выражены, чем дефляционные.</li>
 </ol>
 </section>
             </div>
             <hr/>
             <div class="meta"><div class=categories>
                     Категории:<a href="/categories/macro">Макроэкономика</a>
+                    </div>
+                    <div>
+                        <p>Читайте далее</p>
+                        <ul>
+                                <li><a href='/notes/money_printer'>Почему и как печатают деньги</a></li>
+                        </ul>
                     </div>
                     <div class="up">
                         <span> &uarr; <a href='/notes#money'> Заметки о финансах/Макроэкономика, денежное обращение и механика рынков/Денежное обращение</a> &uarr; </span>
