--- a/updates.html
+++ b/updates.html
@@ -30,6 +30,11 @@
 
         <ul>
             <li>
+                <span>2022-11-21</span>
+                <a href="https://onfin.github.io/notes/money_printer">Почему и как печатают деньги</a>
+                <p class=index-descr>Если «официальные» деньги редки — экономические агенты будут искать/создавать им замену. А банки в силу самой своей природы создают деньги: депозит превращается в кредит + право требования (ПТ) вложенных средств, а кредит возвращается в банк депозитом (деньги в процессе обмена не уничтожаются), чтобы снова стать кредитом + ПТ. ПТ могут служить средством обращения, даже если запрещены досрочные возвраты. Поэтому ни золотой стандарт, ни полное резервирование не являются эффективными ограничителями эмиссии. Объём денежной массы определяется кредитованием: если нет кредитования, то цепочка «депозит → кредит + ПТ → депозит + ПТ → кредит + 2ПТ → ...» обрывается на «депозит → ПТ». Объём кредитования зависит от (а) нормы резервирования, (б) желания ЦБ предоставлять ликвидность банкам, (в) спросом на кредитование, (г) способностью экономики наращивать выпуск (нет роста полезности ⇒ нечем платить проценты по кредитам ⇒ банки их не выдают), (д) склонностью банков к риску. Оптимальные основы создания денег: управляемая ЦБ денежная база, ограниченный нормами резервирования банковский мультипликатор, разрешённая трансформация дюрации + страхование вкладов, скорее общегосударственные денежные знаки.</p>
+            </li>
+            <li>
                 <span>2022-10-13</span>
                 <a href="https://onfin.github.io/notes/gdp_mic">ВВП и ВПК</a>
                 <p class=index-descr>Военные расходы — не решение, а проблема.</p>
