--- a/literacy/instruments/crypto.html
+++ b/literacy/instruments/crypto.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Разбираем экономическую сущность криптовалют и их пригодность в качестве актива в диверсифицированном портфеле. Результаты, как можно догадаться, неутешительные." />        <meta name="keywords" content="финансовая грамотность, инструменты сбережений, блокчейн, криптовалюты, доходность, диверсификация, портфель, биткойн, эфир, bitcoin, ethereum" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/literacy/instruments/crypto" /></head>
+<meta property="og:url" content="https://onfin.github.io/literacy/instruments/crypto" />
+</head>
 
 <body>
     <header>
@@ -36,13 +37,13 @@
                     <p>  Обновлено: <time>2022-02-22</time> </p>
 <p>Находится в:</p>
                     <ul>
+    <a href='/notes#crypto'>Заметки о финансах/Макроэкономика, денежное обращение и механика рынков/Блокчейн и криптовалюты</a>
+
     <a href='/literacy/instruments'>Краткий обзор инструментов сбережения</a>
 <ul>
     <a href='/literacy#instruments'>Грамотность/Инструменты</a>
 
     </ul>
-
-    <a href='/notes#crypto'>Заметки о финансах/Макроэкономика, денежное обращение и механика рынков/Блокчейн и криптовалюты</a>
 
     </ul>
 
@@ -182,8 +183,8 @@
                         </ul>
                     </div>
                     <div class="up">
-                        <span> &uarr; <a href='/literacy/instruments'> Краткий обзор инструментов сбережения</a> &uarr; </span>
                         <span> &uarr; <a href='/notes#crypto'> Заметки о финансах/Макроэкономика, денежное обращение и механика рынков/Блокчейн и криптовалюты</a> &uarr; </span>
+                        <span> &uarr; <a href='/literacy/instruments'> Краткий обзор инструментов сбережения</a> &uarr; </span>
                     </div>
             </div>
             <aside style='display: flex'>
@@ -208,7 +209,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
     </p>
 </div>    </footer></body>
 </html>
