--- a/notes/digital_currencies/index.html
+++ b/notes/digital_currencies/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Центробанки практически всех экономически развитых стран занялись исследованиями в области «цифровых валют». Какие задачи они хотят решить с их помощью, и чем нам всем это грозит?" />        <meta name="keywords" content="цифровая валюта, криптовалюта, биткойн, центральный банк, денежное обращение" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/digital_currencies" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/digital_currencies" />
+</head>
 
 <body>
     <header>
@@ -279,7 +280,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
     </p>
 </div>    </footer></body>
 </html>
