--- a/notes/intl_trade.html
+++ b/notes/intl_trade.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Международная торговля в нацвалютах, которая многим видится как более справедливый порядок по сравнению с использованием небольшого числа резервных валют, на самом деле скорее привела бы к повышенным издержкам, постоянным перебоям в поставках из-за курсовых рисков, повышенной узявимости и меньшей управляемости национальных экономик, валютным войнам. Мне кажется более вероятным, что сложившиеся вызовы (в том числе и для эмитентов резервных валют т.к. сопоставимый с национальной экономикой оффшорный рынок нацвалюты — серьёзная угроза для монетарной и бюджетной стабильности) приведут к активизации разработки наднациональной валюты международных расчётов, возможно, с использованием блокчейн-технологий для организации прозрачного управления ею на основе консенсуса центробанков." />        <meta name="keywords" content="экономика, макроэкономика, международная торговля, национальные валюты, резервные валюты, доллар, внешний долг США" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/intl_trade" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/intl_trade" />
+</head>
 
 <body>
     <header>
@@ -181,7 +182,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
     </p>
 </div>    </footer></body>
 </html>
