--- a/notes/money_printer.html
+++ b/notes/money_printer.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Если «официальные» деньги редки — экономические агенты будут искать/создавать им замену. А банки в силу самой своей природы создают деньги: депозит превращается в кредит + право требования (ПТ) вложенных средств, а кредит возвращается в банк депозитом (деньги в процессе обмена не уничтожаются), чтобы снова стать кредитом + ПТ. ПТ могут служить средством обращения, даже если запрещены досрочные возвраты. Поэтому ни золотой стандарт, ни полное резервирование не являются эффективными ограничителями эмиссии. Объём денежной массы определяется кредитованием: если нет кредитования, то цепочка «депозит → кредит + ПТ → депозит + ПТ → кредит + 2ПТ → ...» обрывается на «депозит → ПТ». Объём кредитования зависит от (а) нормы резервирования, (б) желания ЦБ предоставлять ликвидность банкам, (в) спросом на кредитование, (г) способностью экономики наращивать выпуск (нет роста полезности ⇒ нечем платить проценты по кредитам ⇒ банки их не выдают), (д) склонностью банков к риску. Оптимальные основы создания денег: управляемая ЦБ денежная база, ограниченный нормами резервирования банковский мультипликатор, разрешённая трансформация дюрации + страхование вкладов, скорее общегосударственные денежные знаки." />        <meta name="keywords" content="экономика, макроэкономика, инфляция, дефляция, печать денег, золотой стандарт, полное резервирование, частичное резервирование" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/money_printer" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/money_printer" />
+</head>
 
 <body>
     <header>
@@ -43,6 +44,18 @@
             </header>
             <div class="content">                <section id="">
 <div class="meta">
+<details>
+            <summary>Используется в:</summary>
+            <ul>
+                        <li><a href='/notes/private_money'>«Частные деньги»</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>«Частные деньги»</span>
+        <span class='description'>Мультивалютная система, предложенная Фридрихом фон Хайеком в книге «Частные деньги», основывается на множестве условий и предположений, значительная часть которых нереализуема. И даже при их выполнении оказывается неустойчивой и очень дорогой в эксплуатации. Все участники системы вынуждены нести гораздо более высокие транзакционные издержки и часто действовать вопреки своим текущим экономическим интересам. Едва ли такая система окажется выгоднее, чем единая фиатная валюта с умеренной инфляцией. Также мне не кажется оправданным смешивать в одном инструменте средство обращения и средство сбережения (требование долгосрочного сохранения покупательной способности денег): по отдельности эти функции реализуются лучше и дешевле. Тем не менее, разработка механизмов, которые позволяли бы находить оптимальные «ареалы монетарного регулирования» (как территориальные, так и отраслевые) мне кажется необходимой, просто это задача отнюдь не уровня «рыночек порешает».</span>
+    </span></li>
+            </ul>
+        </details>
 </div>
 <p>Деньги печатают именно «почему», а не «зачем». Деньги — это средство обращения. Если экономическим агентам не хватает денежной массы для выполнения расчётов, они <em>вынужденно</em> начинают использовать другие средства, т.е., фактически, печатать деньги (квазиденьги, денежные суррогаты), ведь скоординировать одновременное по всей экономике изменение уровня цен для подстройки к актуальному уровню денежной массы и скорости её обращения — <a href="/notes/lightspeed">невозможно</a>
         <button class='link-meta-anchor'><strong>i</strong></button>
@@ -110,13 +123,19 @@
 </li>
 </ol>
 <p>Практически по всем параметрам выбор достаточно очевиден: эндогенная база, ограниченный мультипликатор, разрешена трансформация дюрации. Однако выбор между общегосударственными и частными денежными знаками уже может быть
-<span class='todo' id='PNhbJS2CKjk' markdown=1><i class='share'><a href='/notes/money_printer#PNhbJS2CKjk'>&#xe902;</a></i>предметом обсуждения
+<span class='todo' id='2On5BfyXSQ0' markdown=1><i class='share'><a href='/notes/money_printer#2On5BfyXSQ0'>&#xe902;</a></i>предметом обсуждения
 </span>.</p>
 </section>
             </div>
             <hr/>
             <div class="meta"><div class=categories>
                     Категории:<a href="/categories/macro">Макроэкономика</a>
+                    </div>
+                    <div>
+                        <p>Читайте далее</p>
+                        <ul>
+                                <li><a href='/notes/private_money'>«Частные деньги»</a></li>
+                        </ul>
                     </div>
                     <div class="up">
                         <span> &uarr; <a href='/notes#money'> Заметки о финансах/Макроэкономика, денежное обращение и механика рынков/Денежное обращение</a> &uarr; </span>
@@ -131,6 +150,7 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=/notes/money_printer" target="_blank"><i class="share">&#xea91;</i></a>
         </div>        
             <a class="donate-button" href="/donate">Отблагодарить</a>
+          <a class="donate-button" href='https://t.me/on_fin/137' target="_blank">Комментарии <img src='/images/tg.svg' style='height: 0.7em; margin-left: -0.5ex; vertical-align: text-top'></a>
     </div>
             </aside>
         </article>
@@ -143,7 +163,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
     </p>
 </div>    </footer></body>
 </html>
