--- a/updates.html
+++ b/updates.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Все обновления сайта" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io" /></head>
+<meta property="og:url" content="https://onfin.github.io" />
+</head>
 <body>
     <header>
 <nav class="menu">
@@ -29,6 +30,11 @@
         <h1>Обновления</h1>
 
         <ul>
+            <li>
+                <span>2022-11-22</span>
+                <a href="https://onfin.github.io/notes/private_money">«Частные деньги»</a>
+                <p class=index-descr>Мультивалютная система, предложенная Фридрихом фон Хайеком в книге «Частные деньги», основывается на множестве условий и предположений, значительная часть которых нереализуема. И даже при их выполнении оказывается неустойчивой и очень дорогой в эксплуатации. Все участники системы вынуждены нести гораздо более высокие транзакционные издержки и часто действовать вопреки своим текущим экономическим интересам. Едва ли такая система окажется выгоднее, чем единая фиатная валюта с умеренной инфляцией. Также мне не кажется оправданным смешивать в одном инструменте средство обращения и средство сбережения (требование долгосрочного сохранения покупательной способности денег): по отдельности эти функции реализуются лучше и дешевле. Тем не менее, разработка механизмов, которые позволяли бы находить оптимальные «ареалы монетарного регулирования» (как территориальные, так и отраслевые) мне кажется необходимой, просто это задача отнюдь не уровня «рыночек порешает».</p>
+            </li>
             <li>
                 <span>2022-11-21</span>
                 <a href="https://onfin.github.io/notes/money_printer">Почему и как печатают деньги</a>
@@ -614,7 +620,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
     </p>
 </div>    </footer>
 </body>
