--- a/notes/lightspeed.html
+++ b/notes/lightspeed.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Конечная скорость распространения информации, и, следовательно, жёсткость цен — фундаментальное свойство рыночной экономики, состоящей из независимых агентов, которые координируются через близкодействующие взаимодействия. Это приводит к тому, что рыночная экономика никогда не находится в состоянии равновесия, а является средой, в которой распространяются и взаимодействуют «волны», вызванные внешними воздействиями. Поэтому её динамика существенно зависит не только от характера внешних воздействий и наложенных ограничений, но и от текущего состояния, включая «внутреннее» состояние экономических агентов. Это существенно усложняет регулирование, вплоть до того, что отложенные эффекты регулирования могут быть противоположны мгновенным, а мгновенные эффекты — противоположны желаемым. Из этого же следует неустойчивость экономики по денежному обращению: локальная избыточность/недостаточность денежной массы приводит не только к изменению уровня цен, но и к изменению объёма и структуры выпуска (вплоть до возникновения патологических самоподдерживающихся режимов). При этом, изменения, вызываемые дефицитом денежной массы, быстрее возникают, губительнее и устойчивее." />        <meta name="keywords" content="экономика, макроэкономика, жёсткость цен, нейтральность денег, неравновесная экономика, австрийский экономический цикл, инфляция, дефляция" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/lightspeed" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/lightspeed" />
+</head>
 
 <body>
     <header>
@@ -46,6 +47,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
+                        <li><a href='/notes/private_money'>«Частные деньги»</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>«Частные деньги»</span>
+        <span class='description'>Мультивалютная система, предложенная Фридрихом фон Хайеком в книге «Частные деньги», основывается на множестве условий и предположений, значительная часть которых нереализуема. И даже при их выполнении оказывается неустойчивой и очень дорогой в эксплуатации. Все участники системы вынуждены нести гораздо более высокие транзакционные издержки и часто действовать вопреки своим текущим экономическим интересам. Едва ли такая система окажется выгоднее, чем единая фиатная валюта с умеренной инфляцией. Также мне не кажется оправданным смешивать в одном инструменте средство обращения и средство сбережения (требование долгосрочного сохранения покупательной способности денег): по отдельности эти функции реализуются лучше и дешевле. Тем не менее, разработка механизмов, которые позволяли бы находить оптимальные «ареалы монетарного регулирования» (как территориальные, так и отраслевые) мне кажется необходимой, просто это задача отнюдь не уровня «рыночек порешает».</span>
+    </span></li>
                         <li><a href='/notes/money_printer'>Почему и как печатают деньги</a>    <button class='link-meta-anchor'>
             <strong>i</strong>
     </button>
@@ -155,7 +163,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
     </p>
 </div>    </footer></body>
 </html>
