--- a/notes/piketti2/index.html
+++ b/notes/piketti2/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Социальное неравенство достаточно хорошо объясняется просто случайными флуктуациями в уровне дохода, которые, в отсутствие перераспределения, приводят к сосредоточению всех благ в руках нескольких человек. Прогрессивная налоговая шкала  эффективнее плоской в том смысле, что приводит к меньшему перераспределению благ через государство для обеспечения того же уровня неравенства." />        <meta name="keywords" content="социальное неравенство, кривая Лоренца, коэффициент Джини, перераспределение, налоги, плоская ставка, прогрессивная ставка" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/piketti2" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/piketti2" />
+</head>
 
 <body>
     <header>
@@ -43,6 +44,18 @@
             </header>
             <div class="content">                <section id="">
 <div class="meta">
+<details>
+            <summary>Используется в:</summary>
+            <ul>
+                        <li><a href='/notes/freemarket'>Рыночек не порешает</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Рыночек не порешает</span>
+        <span class='description'>Помимо отрицателей рыночной экономики, есть ещё и обширная категория последователей культа Свободного Рынка: отмените всё регулирование, рыночек сам всё порешает. Нет, не порешает. Математически доказанная эффективность рыночной экономики — это следствие ряда условий, обеспечить которые, в ряде ситуаций, по меньшей мере нетривиально, если вообще возможно. Также, свободный рынок способен лишь к локальной оптимизации экономики, а найденные им равновесия могут быть «плохими» — приводить к стагнации или хрупкости экономики (пусть и при максимально эффективном использовании имеющихся ресурсов) или просто не соответствовать представлениям о справедливом распределении. Таким образом, регулирование рынка и перераспределение ресурсов внерыночными методами — необходимо — чтобы (а) создавать необходимые условия для функционирования рынка, (б) направлять развитие экономики в нужную сторону, (в) компенсировать ошибки экономических агентов и рыночного механизма в целом. Почему при всём при этом мы не можем отказаться от рыночной экономики? Потому что у нас нет альтернатив, для которых обеспечение максимальной эффективности (субъективной, выраженной индивидуальными функциями полезности) распределения ресурсов, было бы доказанным в условиях, создаваемых с меньшим объёмом внешних вмешательств.</span>
+    </span></li>
+            </ul>
+        </details>
 </div>
 <p>В предыдущей заметке с <a href="/notes/piketti">критикой Пикетти</a>
         <button class='link-meta-anchor'><strong>i</strong></button>
@@ -102,7 +115,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
     </p>
 </div>    </footer></body>
 </html>
