--- a/literacy/brokers.html
+++ b/literacy/brokers.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров." />        <meta name="keywords" content="финансовая грамотность, фондовый рынок, брокеры, тарифы брокеров, таблица брокеров" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/literacy/brokers" /></head>
+<meta property="og:url" content="https://onfin.github.io/literacy/brokers" />
+</head>
 
 <body>
     <header>
@@ -33,7 +34,7 @@
                 <h1> Как выбрать брокера </h1>
                 <div class="meta"><p class=summary>На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров.</p>
                     <p> Опубликовано: <time>2019-12-16</time> </p>
-                    <p>  Обновлено: <time>2021-11-27</time> </p>
+                    <p>  Обновлено: <time>2023-03-04</time> </p>
 <p>Находится в:</p>
                     <ul>
     <a href='/literacy#finmarket'>Грамотность/Финансовые рынки</a>
@@ -48,6 +49,7 @@
         Обновления:
         <ul>
                 <li>2021-11-27: Убрал раздел с тарифами брокеров, т.к. нет ресурсов поддерживать его актуальность.</li>
+                <li>2023-03-04: Усилил отрицание инвестирования в зарубежные рынки через российскую инфраструктуру.</li>
         </ul>
         </div><details>
             <summary>Используется в:</summary>
@@ -105,11 +107,11 @@
 <ol>
 <li>Надёжность. Выбираем брокера при надёжном банке.</li>
 <li>Удобство и стоимость ввода-вывода денег. Удобнее и дешевле всего, конечно, когда ваш брокер находится при вашем базовом банке. Но так получается не всегда. Если брокерский счёт открывается для, условно, пенсионных накоплений, то удобством и стоимостью вывода денег можно пренебречь. А вот если для текущих операций: обмена валюты на бирже, среднесрочных накоплений в ОФЗ, то это становится важным.</li>
-<li>Возможность получать дивиденды и купоны на банковский счёт (желательно накопительный с ежедневным начислением процентов). Особенно с ИИС. Компании выплачивают дивиденды нерегулярно, и в самом начале инвестиций эти суммы будут слишком незначительными, чтобы на них вновь можно было что-то купить. Поэтому удобно, когда сумма для реинвестирования копится на счёте с ежедневным начислением процентов (на остаток на брокерском счёте проценты как правило не начисляются, а покупать облигации на короткий срок невыгодно — комиссия и спред съедят всю доходность). Для ИИС это актуально ещё и потому, что (а) вывести с него деньги другим способом нельзя вообще, (б) при заведении обратно полученных с ИИС выплат их можно на общих основаниях зачесть при подаче на налоговый вычет.</li>
-<li>Удобство заключения сделок. Стандартный торговый терминал — QUIK — велик и страшен, но у ряда брокеров он — единственный способ взаимодействия (и работает только под Windows). Всё-таки крайне желательно, чтобы у брокера был личный кабинет/мобильное приложение с возможностью совершения сделок через них.</li>
-<li>Удобство работы с брокером. С ВТБ, например, вообще невозможно взаимодействовать удалённо. Любое действие — надо идти в офис и подписывать там с десяток листов. Но это сложно выяснить до начала работы, так что не стоит сразу и всецело отдаваться одному брокеру: заведите небольшую сумму, осмотритесь, попробуйте внести какие-то изменения в анкету клиента и/или договор.</li>
+<li>Возможность получать дивиденды и купоны на банковский счёт (желательно накопительный с ежедневным начислением процентов). Особенно с ИИС. Компании выплачивают дивиденды нерегулярно, и в самом начале инвестиций эти суммы будут слишком незначительными, чтобы на них вновь можно было что-то купить. Поэтому удобно, когда сумма для реинвестирования копится на счёте с ежедневным начислением процентов (на остаток на брокерском счёте проценты как правило не начисляются, а покупать облигации на короткий срок невыгодно — комиссия, спред и НДФЛ съедят всю доходность). Для ИИС это актуально ещё и потому, что (а) вывести с него деньги другим способом нельзя вообще, (б) при заведении полученных с ИИС выплат обратно на ИИС, их можно на общих основаниях зачесть при подаче на налоговый вычет.</li>
+<li>Удобство заключения сделок. Стандартный торговый терминал — QUIK — велик и страшен, но у ряда брокеров он — единственный способ взаимодействия. Всё-таки крайне желательно, чтобы у брокера был личный кабинет/мобильное приложение с возможностью совершения сделок через них.</li>
+<li>Удобство работы с брокером (с ВТБ, например, вообще невозможно взаимодействовать удалённо). Но это сложно выяснить до начала работы, так что не стоит сразу и всецело отдаваться одному брокеру: заведите небольшую сумму, осмотритесь, попробуйте внести какие-то изменения в анкету клиента и/или договор.</li>
 <li>Тарифы брокера. Прикиньте, какие операции вы будете совершать через брокера, как часто, и сколько это будет стоить. А через 5–10 лет? В принципе, в высоких комиссиях с оборота для пассивного инвестора нет ничего плохого: платит он их редко, плюс они препятствуют спекуляциям. А вот все виды фиксированных комиссий разрушают небольшой капитал весьма ощутимо.</li>
-<li>Возможность запретить брокеру давать в долг ваши ценные бумаги третьим лицам. Почти все брокеры оставляют за собой такое право по умолчанию (единственное известное мне исключение — Промсвязьбанк). И дело не в том, что третье лицо скроется, а в том, что срок перечисления дивидендов по отданным в займ бумагам может доходить до месяца (потому что дивиденды получит заёмщик и с него их надо списать и вернуть исходному владельцу).</li>
+<li>Возможность запретить брокеру давать в долг ваши ценные бумаги третьим лицам. Почти все брокеры оставляют за собой такое право по умолчанию. И дело не в том, что третье лицо скроется, а в том, что срок перечисления дивидендов по отданным в займ бумагам может доходить до месяца (потому что дивиденды получит заёмщик и с него их надо списать и вернуть исходному владельцу).</li>
 </ol>
 </section>
 <section id="_5">
@@ -117,8 +119,8 @@
 <div class="meta">
 </div>
 <ol>
-<li>Доступ и тарифы на Санкт-Петербургской бирже. Там торгуются только отдельные америанские акции, без ETF. Если у вас достаточно денег чтобы собрать нормальный портфель из отдельных американских акций — вы можете это делать через американского брокера, что гораздо надёжнее (да и дешевле в конечном итоге). Если нет — купите FXUS на Мосбирже.</li>
-<li>Доступ и тарифы на срочном рынке и рынке драгметаллов. Это или для спекулянтов, или для финансовых организаций.</li>
+<li>Доступ и тарифы для торговли иностранными бумагами (на Санкт-Петербургской бирже и/или иностранных). Я думаю, все уже осознали, что не стоит их приобретать через российскую инфраструктуру.</li>
+<li>Доступ и тарифы на срочном рынке. Это или для спекулянтов, или для финансовых организаций.</li>
 <li>Стоимость маржинального кредитования. Если оно включено — отключайте сразу, во избежание.</li>
 <li>Обучение, консультирование, аналитика. Ценность всего этого у <em>любого</em> брокера — отрицательная: он себе комиссии накручивает.</li>
 <li>Приём поручений по телефону. У нас тут уже, вообще-то, середина XXI века начинается, если кто не заметил.</li>
@@ -162,7 +164,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
     </p>
 </div>    </footer></body>
 </html>
