--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,11 @@
 
         <ul>
             <li>
+                <span>2023-03-04</span>
+                <a href="https://onfin.github.io/literacy/brokers">Обновлено: Как выбрать брокера</a>
+                <p class=index-descr>Усилил отрицание инвестирования в зарубежные рынки через российскую инфраструктуру.</p>
+            </li>
+            <li>
                 <span>2022-12-26</span>
                 <a href="https://onfin.github.io/notes/freemarket">Рыночек не порешает</a>
                 <p class=index-descr>Помимо отрицателей рыночной экономики, есть ещё и обширная категория последователей культа Свободного Рынка: отмените всё регулирование, рыночек сам всё порешает. Нет, не порешает. Математически доказанная эффективность рыночной экономики — это следствие ряда условий, обеспечить которые, в ряде ситуаций, по меньшей мере нетривиально, если вообще возможно. Также, свободный рынок способен лишь к локальной оптимизации экономики, а найденные им равновесия могут быть «плохими» — приводить к стагнации или хрупкости экономики (пусть и при максимально эффективном использовании имеющихся ресурсов) или просто не соответствовать представлениям о справедливом распределении. Таким образом, регулирование рынка и перераспределение ресурсов внерыночными методами — необходимо — чтобы (а) создавать необходимые условия для функционирования рынка, (б) направлять развитие экономики в нужную сторону, (в) компенсировать ошибки экономических агентов и рыночного механизма в целом. Почему при всём при этом мы не можем отказаться от рыночной экономики? Потому что у нас нет альтернатив, для которых обеспечение максимальной эффективности (субъективной, выраженной индивидуальными функциями полезности) распределения ресурсов, было бы доказанным в условиях, создаваемых с меньшим объёмом внешних вмешательств.</p>
@@ -456,7 +461,7 @@
                 <p class=index-descr>Зачем нужны и какие риски несут наличные деньги.</p>
             </li>
             <li>
-                <span>2021-11-27</span>
+                <span>2023-03-04</span>
                 <a href="https://onfin.github.io/literacy/brokers">Как выбрать брокера</a>
                 <p class=index-descr>На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров.</p>
             </li>
